--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,16 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: SwiftEyes
+email: specialvict@gmail.com
+description: > # An easy way to access OpenCV library from Swift.
 baseurl: "/jekyll-simple" # the subpath of your site, e.g. /blog
-url: "http://wildflame.me" # the base hostname & protocol for your site
-twitter_username: Taffyer 
-github_username:  wild-flame 
+url: "https://oaleeapp.github.io/SwiftEyes/" # the base hostname & protocol for your site
+twitter_username: oaleeapp
+github_username:  oaleeapp
 
 # Build settings
 markdown: kramdown
@@ -24,7 +21,7 @@ kramdown:
 
 # Third-party services
 # just leave someone empty to disable it
-# google_analytics: 
+# google_analytics:
 disqus_shortname:
 
 # used this for post_excerpt at index_page
